data/derived/sp14/progs/unify/prog0053.ml.out
Characters 8-12:
  let a = Zero+Zero;;
          ^^^^
Error: This expression has type nat but an expression was expected of type
         int
